alterei detalhes nos sensores e mudei configurações de deploy do firebase hosting

--- a/PainelControleReact/firebase.json
+++ b/PainelControleReact/firebase.json
@@ -1,11 +1,13 @@
 {
   "hosting": {
-    "public": "public",
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
     ]
+  },
+  "database": {
+    "rules": "database.rules.json"
   }
 }
