mudanças no app android

--- a/PainelControleAndroid/app/src/main/AndroidManifest.xml
+++ b/PainelControleAndroid/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <service android:name=".services.MyFirebaseInstanceIDService">
@@ -28,13 +32,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".activities.ThiefActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activities.ThiefActivity"></activity>
     </application>
 
 </manifest>
