login no app android

--- a/PainelControleAndroid/app/src/main/AndroidManifest.xml
+++ b/PainelControleAndroid/app/src/main/AndroidManifest.xml
@@ -14,11 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <service android:name=".services.MyFirebaseInstanceIDService">
@@ -33,7 +29,13 @@
         </service>
 
         <activity android:name=".activities.ThiefActivity" />
-        <activity android:name=".activities.TestActivity"></activity>
+        <activity android:name=".activities.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
